# fastmcp-ecs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
IaC/: app.py  cdk.json
IaC/constructs/: fargate_service.py
IaC/stacks/: ecs_stack.py  network_stack.py
src/mcp_server/: config.py  main.py  server.py
src/mcp_server/auth/: bearer.py
src/mcp_server/tools/: example.py
tests/: conftest.py  test_auth.py  test_server.py  test_tools.py
