[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-ecs"
version = "0.1.0"
description = "Template for deploying a FastMCP server to AWS ECS (Fargate)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

# ---------------------------------------------------------------------------
# default env — MCP server development & testing
# ---------------------------------------------------------------------------
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.envs.default.scripts]
# Run the test suite
test    = "pytest tests/ -v"
# Lint and format
lint    = "ruff check src tests"
format  = "ruff format src tests"
# Start the dev server with auto-reload (requires JWT_PUBLIC_KEY env var)
dev     = "uvicorn mcp_server.main:app --reload --port 8000"

# ---------------------------------------------------------------------------
# iac env — AWS CDK operations
# Prerequisite: Node.js + `npm install -g aws-cdk` (or use npx aws-cdk)
# ---------------------------------------------------------------------------
[tool.hatch.envs.iac]
skip-install = true
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
]

[tool.hatch.envs.iac.scripts]
# Preview synthesised CloudFormation templates
synth     = "cd IaC && cdk synth"
# Show pending infrastructure changes
diff      = "cd IaC && cdk diff"
# Deploy (or update) all stacks — outputs ECR URI, cluster & service names
deploy    = "cd IaC && cdk deploy --all --require-approval never"
# Tear down all stacks
destroy   = "cd IaC && cdk destroy --all"
# One-time CDK bootstrap for a new AWS account/region
bootstrap = "cd IaC && cdk bootstrap"

# ---------------------------------------------------------------------------
# docker env — container image lifecycle
#
# Required environment variables before running these scripts:
#   ECR_REPO_URI  e.g. 123456789.dkr.ecr.us-east-1.amazonaws.com/fastmcp-ecs
#   AWS_REGION    e.g. us-east-1
#   ECS_CLUSTER   e.g. FastMCPCluster   (from `hatch run iac:deploy` output)
#   ECS_SERVICE   e.g. FastMCPService   (from `hatch run iac:deploy` output)
#   IMAGE_TAG     optional, defaults to "latest"
# ---------------------------------------------------------------------------
[tool.hatch.envs.docker]
detached = true
dependencies = []

[tool.hatch.envs.docker.scripts]
# Build the Docker image and tag it for ECR
build = "docker build -t {env:ECR_REPO_URI}:{env:IMAGE_TAG:latest} ."

# Authenticate the local Docker daemon to ECR
ecr-login = "aws ecr get-login-password --region {env:AWS_REGION} | docker login --username AWS --password-stdin {env:ECR_REPO_URI}"

# Build → ECR login → push
push = [
    "build",
    "ecr-login",
    "docker push {env:ECR_REPO_URI}:{env:IMAGE_TAG:latest}",
]

# Force ECS to pull the latest image and restart tasks
deploy-service = "aws ecs update-service --cluster {env:ECS_CLUSTER} --service {env:ECS_SERVICE} --force-new-deployment --region {env:AWS_REGION}"

# Full release pipeline: build → push → redeploy ECS
release = [
    "push",
    "deploy-service",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version   = "3.11"
strict           = true
ignore_missing_imports = true
